--- a/tech-agile/index.html
+++ b/tech-agile/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <title>Teknisk agil</title>
     <ul>
-        <li>Ensemble working</li>
-        <li>Professional Scrum Developer</li>
+        <li>
+            <a href="https://proagile.se/vara-kurser/ensemble-working">
+                Ensemble working
+            </a>
+        </li>
+        <li>
+            <a href="https://proagile.se/vara-kurser/professional-scrum-developer">
+                Professional Scrum Developer
+            </a>
+        </li>
     </ul>
 </head>
 <body>
