Gemensam Agil Grund - Agile fundamentals

--- a/index.html
+++ b/index.html
@@ -10,4 +10,10 @@
           href="tech-agile"
           coords="67,336,177,393"
           shape="rect">
+    <area target="" 
+    	  alt="Kurser i agil grund" 
+	  title="Kurser i agil grund" 
+	  href="agile-fundaments" 
+	  coords="57,476,201,557" 
+	  shape="rect">
 </map>
