Add GAG to every signpost section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 <h2 id="teknisk-agil">Teknisk agil</h2>
 <ul>
     <li>
+        <a href="https://proagile.se/vara-kurser/ag">
+            Gemensam Agil Grund
+        </a>
+    </li>
+    <li>
         <a href="https://proagile.se/vara-kurser/ensemble-working">
             Ensemble working
         </a>
@@ -63,6 +68,11 @@
 <h2 id="organisation">Organisation</h2>
 <ul>
     <li>
+        <a href="https://proagile.se/vara-kurser/ag">
+            Gemensam Agil Grund
+        </a>
+    </li>
+    <li>
         <a href="https://proagile.se/vara-kurser/professional-agile-coach">
             Professional Agile Coach?
         </a>
@@ -76,15 +86,15 @@
             Gemensam Agil Grund
         </a>
     </li>
-    <li>
-        <a href="https://proagile.se/vara-kurser/professional-scrum-master">
-            Professional Scrum Master
-        </a>
-    </li>
 </ul>
 
 <h2 id="ledarskap">Ledarskap</h2>
 <ul>
+    <li>
+        <a href="https://proagile.se/vara-kurser/ag">
+            Gemensam Agil Grund
+        </a>
+    </li>
     <li>
         <a href="https://proagile.se/vara-kurser/professional-agile-coach">
             Professional Agile Coach
@@ -94,6 +104,11 @@
 
 <h2 id="förändringsledning">Förändringsledning</h2>
 <ul>
+    <li>
+        <a href="https://proagile.se/vara-kurser/ag">
+            Gemensam Agil Grund
+        </a>
+    </li>
     <li>
         <a href="https://proagile.se/vara-kurser/professional-agile-coach">
             Professional Agile Coach
